--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
 <link rel="manifest" href="./favicon/site.webmanifest">
 <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5584c6">
+<link rel="icon" href="./favicon/favicon.ico">	
 <meta name="msapplication-TileColor" content="#5584c6">
 <meta name="theme-color" content="#5584c6">
 
