--- a/documents.html
+++ b/documents.html
@@ -63,7 +63,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>
 							</div>
 						</div>
 						<div class="documents__item">
@@ -71,7 +71,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>
 							</div>
 						</div>
 						<div class="documents__item">
@@ -79,7 +79,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>
 							</div>
 						</div>
 						<div class="documents__item">
@@ -87,7 +87,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>
 							</div>
 						</div>
 						<div class="documents__item">
@@ -95,7 +95,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>»
 							</div>
 						</div>
 						<div class="documents__item">
@@ -103,7 +103,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>
 							</div>
 						</div>
 						<div class="documents__item">
@@ -111,7 +111,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>
 							</div>
 						</div>
 						<div class="documents__item">
@@ -119,7 +119,7 @@
 								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw"><img src="./img/documets/1.png" alt="photo icon document"></a>
 							</div>
 							<div class="documents__description">
-								УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»
+								<a class="documents__img-link" href="https://disk.yandex.ru/i/ciW1YHlKpLHYbw">УСТАВ Общероссийского общественно-государственного движения детей и молодежи «Движение первых»</a>
 							</div>
 						</div>
 					</div>
